--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,16 @@ a {
 .bottom-container h4:hover {
     transform: scale(1.1);
 }
+
+.login-window {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    font-size: 24px;
+    padding: 10px;
+}
+  
