--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./../public/logo11.svg);
+  background-size: cover;
+  background-position: center;
   background-color: var(--gray);
+  background-blend-mode: color-dodge;
+  
 }
 
 code {
