--- a/src/App.css
+++ b/src/App.css
@@ -157,10 +157,11 @@ a {
     padding: .25rem;
     font-family: var(--primary-font);
     color: var(--accent);
+    z-index: 10000;
 }
 
 .receipt-div {
-    background: #fff;
+    background: var(--secondary);
     width: 100%;
     height: 100vh;
     position: relative;
@@ -187,12 +188,11 @@ a {
 .pay-now-button {
     font-family: var(--primary-font);
     position: absolute;
-    right: 3rem;
+    right: 11.8rem;
     bottom: 2rem;
     height: 50px;
-    width: 100px;
+    width: 150px;
     border-radius: 10px;
-    border: 1px solid 1rem;
     border: 1px solid var(--primary);
     font-size: 1rem;
     display: flex;
@@ -200,6 +200,7 @@ a {
     flex-direction: column;
     align-items: center;
     color: var(--primary);
+    box-shadow: 0 0 5px #000;
 }
 .pay-now-button:hover {
     color: var(--secondary);
@@ -210,13 +211,12 @@ a {
 
 .add-button {
     font-family: var(--primary-font);
-    position: absolute;
-    left: 3rem;
-    bottom: 2rem;
+    left: 14.5rem;
+    bottom: -17rem;
     height: 50px;
     width: 100px;
     border-radius: 10px;
-    border: 1px solid 1rem;
+    position: relative;
     border: 1px solid var(--primary);
     font-size: 1rem;
     display: flex;
@@ -224,6 +224,7 @@ a {
     flex-direction: column;
     align-items: center;
     color: var(--primary);
+    box-shadow: 0 0 5px #000;
 }
 .add-button:hover {
     color: var(--secondary);
@@ -261,4 +262,26 @@ a {
 .x-button:hover {
     cursor: pointer;
     transform: scale(1.1);
+}
+
+.logout-button {
+    height: 50px;
+    width: 100px;
+    margin: 1rem 0 0 1rem;
+    border-radius: 10px;
+    border: 2px var(--primary) solid;
+    box-shadow: 0 0 5px #000;
+}
+.logout-button:hover {
+    color: red;
+    border: 2px solid var(--primary);
+    background-color: rgba(255, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.discount-h3 {
+    position: relative;
+    bottom: -42.5rem;
+    z-index: 10000;
+    left: 1rem; 
 }
