--- a/src/components/discountButtons.css
+++ b/src/components/discountButtons.css
@@ -1,10 +1,18 @@
 .discount-buttons {
     position: absolute;
-    bottom: 7rem;
+    bottom: 8rem;
+    height: 100px;
+    overflow-y: auto;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: 0 .5rem;
 }
 
 .discount-button {
     height: 36px;
-    width: 150px;
+    width: 140px;
     box-sizing: border-box;
 }
